welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:6: error: reassignment to val
      n = n%10
        ^